current:
  * fix C++ video callback bug
    - add C++ processor example
  * add per-symbology cache consistency
    - reliable symbologies decode immediately by default
    - no more need to disable cache with video
    - also fix crop bugs w/video scanning
  * add support for scanning partial images (cropping)
    - update c++, python, perl, java bindings and tests
  * fix couple of leaks
  * remove doc hints about GFDL (bug #3004411)
    - apply LGPL to API docs
  * relax Code 39 width ratio checks
  * core library portability improvements
    - remove some unnecessary C99 syntax
    - add configure checks for errno
    - enhance C++ Symbol interface
  * adjust Python module README (add examples and note DLL in path)
  * fix QR Code missing from man pages (bug #2969857)
  * cleanup decoder assertions and locking (bug #2966916)
  * cleanup and expose iphone help display API
  * fixes to new iphone help display
  * migrate iphone help display to integrated web page (NB resource updates!)
    - allows easier customization
    - local links open directly, external links confirm and jump out to Safari
    - JavaScript hook for help context customization
    - also enhanced default help (note this changes the required resources)
    - fix to disable scanning during help overlay
    - thanks to iafanasyev and others for detailed suggestions
  * fix iphone custom overlay response (bug #2959617)
    - thanks to an anonymous user for the patch!
  * iphone widget performance tuning enhancements
    - fix crop calculation bug in ZBarImage
    - add properties to control pre-scan image cropping and scaling
    - add property for scanner cache control
    - enable some scanner density control (FIXME should be property)
    - fix ifdef for quality control (FIXME should be property)
    - add "sequence" mode test (not actually so useful)
  * realtime scanning for iphone widget
    - uses UIGetScreenImage() (NB private)
    - ZBarImage from CGImage (instead of UIImage)